--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,9 +3,23 @@
   <h1>
     Welcome to {{ title }}!
   </h1>
-  <app-employee-info></app-employee-info>
+  <!-- <app-employee-info></app-employee-info> -->
   <!-- <app-employee></app-employee>
   <app-contactus></app-contactus>
   <p>Address: JP Morgan, Mumbai </p>-->
-  
+</div>
+<div style="padding: 5px">
+  <ul class="nav nav-tabs">
+    <li routerLinkActive="active">
+        <a routerLink="home">Home</a>
+    </li>
+    <li routerLinkActive="active">
+      <a routerLink="employeeslist">Employees List</a>
+    </li>
+    <li routerLinkActive="active">
+      <a routerLink="employees">Employees</a>
+    </li>
+  </ul>
+
+<router-outlet></router-outlet>
 </div>
