--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,7 @@
   <p>Address: JP Morgan, Mumbai </p>-->
 </div>
 <div style="padding: 5px">
-  <ul class="nav nav-tabs">
+  <ul class="nav nav-pills">
     <li routerLinkActive="active">
         <a routerLink="home">Home</a>
     </li>
@@ -18,6 +18,9 @@
     </li>
     <li routerLinkActive="active">
       <a routerLink="employees">Employees</a>
+    </li>
+    <li routerLinkActive="active">
+      <a routerLink="employeeservice">Employees Service</a>
     </li>
   </ul>
 
