--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,6 +22,12 @@
     <li routerLinkActive="active">
       <a routerLink="employeeservice">Employees Service</a>
     </li>
+    <li routerLinkActive="active">
+      <a routerLink="createemployee">Create New Employee</a>
+    </li>
+    <li routerLinkActive="active">
+      <a routerLink="items">Shopping Items</a>
+    </li>
   </ul>
 
 <router-outlet></router-outlet>
