--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,7 @@
-<!--The content below is only a placeholder and can be replaced.-->
 <div style="text-align:center">
   <h1>
-    Welcome to {{ title }}!
+    Welcome to {{ title }}
   </h1>
-  <!-- <app-employee-info></app-employee-info> -->
-  <!-- <app-employee></app-employee>
-  <app-contactus></app-contactus>
-  <p>Address: JP Morgan, Mumbai </p>-->
 </div>
 <div style="padding: 5px">
   <ul class="nav nav-pills">
